--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     </head>
     <body class="is-preload">
+
         <!-- Header -->
         <header id="header">
             <div class="content">
@@ -39,7 +40,10 @@
             </div>
         </header>
 
-        <!-- Two -->
+
+        <!-- One -->
+        <p id="one">
+
         <section id="two" class="wrapper">
             <div class="inner alt">
                 <section class="spotlight">
@@ -66,7 +70,7 @@
             </div>
         </section>
 
-        <!-- Three -->
+        <!-- Two -->
         <section id="three" class="wrapper style2 special">
             <ul class="actions special">
                 <li><a onclick="downloadpack()" class="button primary icon solid fa-download">Download</a></li>
