--- a/allver.html
+++ b/allver.html
@@ -41,12 +41,19 @@
             <div class="inner">
                 <table>
                     <tbody>
+
+                        <tr>
+                            <strong>    Pack Version</strong>
+                            <strong>  ㅤㅤㅤㅤㅤㅤㅤMinecraft Version</strong>
+                            <strong>     ㅤㅤUpdate Date</strong>
+                            <strong>      ㅤㅤㅤㅤㅤㅤㅤDownload</strong>
+                        </tr>
+
                         <!-- 1.17 -->
-                        <tr><th>1.17</th></tr>
 
                         <tr>
                             <td>1.17_v1.0.0</td>
-                            <td>Improvement Pack Site Upload</td>
+                            <td>1.17</td>
                             <td>2021/09/01</td>
                             <td>
                                 <a style="cursor: pointer" onclick="downloadpack('1.17_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
@@ -55,10 +62,9 @@
 
 
                         <!-- 1.12 -->
-                        <tr><th>1.12</th></tr>
                         <tr>
                             <td>1.12_v1.0.0</td>
-                            <td>Improvement Pack Site Upload</td>
+                            <td>1.12ㅤㅤ</td>
                             <td>2021/09/01</td>
                             <td>
                                 <a style="cursor: pointer" onclick="downloadpack('1.12_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
