--- a/allver.html
+++ b/allver.html
@@ -39,39 +39,39 @@
 
         <section id="four" class="wrapper">
             <div class="inner">
+
+
+                <!-- 1.17 -->
+                <strong style="font-size: 1.3rem">1.17</strong>
                 <table>
                     <tbody>
-
-                        <tr>
-                            <strong>    Pack Version</strong>
-                            <strong>  ㅤㅤㅤㅤㅤㅤㅤMinecraft Version</strong>
-                            <strong>     ㅤㅤUpdate Date</strong>
-                            <strong>      ㅤㅤㅤㅤㅤㅤㅤDownload</strong>
-                        </tr>
-
-                        <!-- 1.17 -->
-
                         <tr>
                             <td>1.17_v1.0.0</td>
-                            <td>1.17</td>
+                            <td>Improvement Pack Site Upload</td>
                             <td>2021/09/01</td>
                             <td>
                                 <a style="cursor: pointer" onclick="downloadpack('1.17_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
                             </td>
                         </tr>
-
-
-                        <!-- 1.12 -->
-                        <tr>
-                            <td>1.12_v1.0.0</td>
-                            <td>1.12ㅤㅤ</td>
-                            <td>2021/09/01</td>
-                            <td>
-                                <a style="cursor: pointer" onclick="downloadpack('1.12_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
+
+                <!-- 1.12 -->
+                <strong style="font-size: 1.3rem">1.12</strong>
+                <table>
+                    <tbody>
+                    <tr>
+                        <td>1.12_v1.0.0</td>
+                        <td>Improvement Pack Site Upload</td>
+                        <td>2021/09/01</td>
+                        <td>
+                            <a style="cursor: pointer" onclick="downloadpack('1.12_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+
             </div>
             <br />
             <ul class="actions special">
