--- a/allver.html
+++ b/allver.html
@@ -56,6 +56,21 @@
                     </tbody>
                 </table>
 
+                <!-- 1.16 -->
+                <strong style="font-size: 1.3rem">1.16</strong>
+                <table>
+                    <tbody>
+                    <tr>
+                        <td>1.16_v1.0.0</td>
+                        <td>Improvement Pack Site Upload</td>
+                        <td>2021/09/01</td>
+                        <td>
+                            <a style="cursor: pointer" onclick="downloadpack('1.16_v1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
                 <!-- 1.12 -->
                 <strong style="font-size: 1.3rem">1.12</strong>
                 <table>
