--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
     <head>
         <script>
-            var PackVer = "1.17_v1.0.0";
-            var PackPath = "pack/Improvement_" + PackVer + ".zip";
+            var McVer = "1.17";
+            var PackVer = "1.0.0";
+            var PackPath = `pack/${McVer}/Improvement_${McVer}_v${PackVer}.zip`;
 
             function downloadpack() {
                 window.open(PackPath);
