--- a/allver.html
+++ b/allver.html
@@ -4,7 +4,7 @@
     <head>
         <script>
             var McVer = "1.17";
-            var PackVer = "1.0.1";
+            var PackVer = "1.0.2";
             var PackPath = `pack/${McVer}/Improvement_${McVer}_v${PackVer}.zip`;
             function downloadpack(mcver, ver) {
                 if (!ver || !mcver) {
@@ -47,6 +47,14 @@
                 <table>
                     <tbody>
                         <tr>
+                            <td>1.17_v1.0.2</td>
+                            <td>Bug Fix</td>
+                            <td>2021/11/08</td>
+                            <td>
+                                <a style="cursor: pointer" onclick="downloadpack('1.17', '1.0.2')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>1.17_v1.0.1</td>
                             <td>Change StainedGlass Texture</td>
                             <td>2021/10/01</td>
@@ -59,7 +67,7 @@
                             <td>Upload</td>
                             <td>2021/09/01</td>
                             <td>
-                                <a style="cursor: pointer" onclick="downloadpack('1.17', '1.0.0')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                                <a style="cursor: pointer" onclick="downloadpack('1.17', '1.0.1')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
                             </td>
                         </tr>
                     </tbody>
