--- a/allver.html
+++ b/allver.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko"></html>
-<html>
+<html lang="ko">
     <head>
         <script>
             var McVer = "1.17";
@@ -17,12 +16,12 @@
         <meta name="title" content="ImprovementPack" />
         <meta name="subject" content="Minecraft JE Resource Pack" />
         <meta name="author" content="Blugon" />
-        <meta property="og:url" content="https://blugon0921.github.io/" />
+        <meta property="og:url" content="https://blugon.me/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="ImprovementPack" />
         <meta property="og:image" content="images/thumbnail.png" />
 
-        <link rel="icon" type="image/png" href="images/favicon/favicon.png"/>
+        <link rel="icon" href="images/favicon/favicon.png">
 
         <title>ImprovementPack</title>
         <meta charset="utf-8" />
@@ -168,7 +167,7 @@
         <footer id="footer">
             <ul class="icons">
                 <li>
-                    <a href="https://www.github.com/blugon0921" class="icon brands fa-github"><span class="label">Github</span></a>
+                    <a href="https://www.github.com/blugon09" class="icon brands fa-github"><span class="label">Github</span></a>
                 </li>
                 <li>
                     <a href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
