--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ko">
     <head>
         <script>
-            var McVer = "1.17";
-            var PackVer = "1.0.1";
-            var PackPath = `pack/${McVer}/Improvement_${McVer}_v${PackVer}.zip`;
+            const McVer = "1.17";
+            const PackVer = "1.0.1";
+            const PackPath = `pack/${McVer}/Improvement_${McVer}_v${PackVer}.zip`;
 
             function downloadpack() {
                 window.open(PackPath);
@@ -19,7 +19,7 @@
         <meta property="og:title" content="ImprovementPack" />
         <meta property="og:image" content="images/thumbnail.png" />
 
-        <link rel="icon" type="image/png" href="images/favicon/favicon.png" />
+        <link rel="icon" href="images/favicon/favicon.png" />
 
         <title>ImprovementPack</title>
         <meta charset="utf-8" />
@@ -32,7 +32,7 @@
         <!-- Header -->
         <header id="header">
             <div class="content">
-                <h1 style="font-family: 양진체">ImprovementPack</h1>
+                <h1 style="font-family: 양진체,serif">ImprovementPack</h1>
                 <p>Made By Blugon</p>
                 <ul class="actions">
                     <li><a onclick="downloadpack()" class="button primary icon solid fa-download">Download Latest</a></li>
@@ -83,7 +83,7 @@
         <footer id="footer">
             <ul class="icons">
                 <li>
-                    <a href="https://www.github.com/blugon0921" class="icon brands fa-github"><span class="label">Github</span></a>
+                    <a href="https://www.github.com/blugon09" class="icon brands fa-github"><span class="label">Github</span></a>
                 </li>
                 <li>
                     <a href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
