--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="two" class="wrapper">
             <div class="inner alt">
                 <section class="spotlight">
-                    <div class="image"><img src="images/01.png" alt="" /></div>
+                    <div class="image"><img src="images/01.png" alt=""></div>
                     <div class="content">
                         <h3>Redesign Enchant Effect</h3>
                         <p>Redesigned the effect that appears when enchanted<br />마법부여시 나타나는 효과를 개선했습니다</p>
