--- a/allver.html
+++ b/allver.html
@@ -33,7 +33,7 @@
                     <tbody>
                         <tr>
                             <td>1.18_v1.0.2</td>
-                            <td>ReDesign tool&diamond</td>
+                            <td>Redesign tool&diamond</td>
                             <td>2021/12/21</td>
                             <td class="PackDownloadButton">
                                 <a style="cursor: pointer" onclick="downloadpack('1.18', '1.0.2')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
