--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Two -->
         <section id="three" class="wrapper style2 special">
             <ul class="actions special">
-                <li><a onclick="downloadpack()" class="button primary icon solid fa-download">Download</a></li>
+                <li><a onclick="downloadLastPack()" class="button primary icon solid fa-download">Download</a></li>
                 <li><a href="./allver.html" class="button">All Versions</a></li>
             </ul>
         </section>
