--- a/allver.html
+++ b/allver.html
@@ -4,7 +4,7 @@
         <meta name="title" content="ImprovementPack" />
         <meta name="subject" content="Minecraft JE Resource Pack" />
         <meta name="author" content="Blugon" />
-        <meta property="og:url" content="https://blugon.me/" />
+        <meta property="og:url" content="https://blugon.kr/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="ImprovementPack" />
         <meta property="og:image" content="images/thumbnail.png" />
@@ -192,13 +192,13 @@
         <footer id="footer">
             <ul class="icons">
                 <li>
-                    <a href="https://www.github.com/blugon09" class="icon brands fa-github"><span class="label">Github</span></a>
+                    <a target="_blank" href="https://www.github.com/blugon09" class="icon brands fa-github"><span class="label">Github</span></a>
                 </li>
                 <li>
-                    <a href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
+                    <a target="_blank" href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/blugon_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    <a target="_blank" href="https://www.instagram.com/blugon_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
                 </li>
             </ul>
         </footer>
