--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="title" content="ImprovementPack" />
         <meta name="subject" content="Minecraft JE Resource Pack" />
         <meta name="author" content="Blugon" />
-        <meta property="og:url" content="https://blugon0921.github.io/" />
+        <meta property="og:url" content="https://blugon.kr" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="ImprovementPack" />
         <meta property="og:image" content="images/thumbnail.png" />
@@ -66,7 +66,7 @@
         <!-- Two -->
         <section id="three" class="wrapper style2 special">
             <ul class="actions special">
-                <li><a onclick="downloadLastPack()" class="button primary icon solid fa-download">Download</a></li>
+                <li><a onclick="downloadLastPack()" class="button primary icon solid fa-download">Download Latest</a></li>
                 <li><a href="./allver.html" class="button">All Versions</a></li>
             </ul>
         </section>
