--- a/allver.html
+++ b/allver.html
@@ -32,8 +32,16 @@
                 <table class="PackDownload">
                     <tbody>
                         <tr>
+                            <td>1.18_v1.0.4</td>
+                            <td>Ping image change</td>
+                            <td>2022/02/19</td>
+                            <td class="PackDownloadButton">
+                                <a style="cursor: pointer" onclick="downloadpack('1.18', '1.0.4')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>1.18_v1.0.3</td>
-                            <td>Font Bug Fix</td>
+                            <td>Font bug fix</td>
                             <td>2022/02/19</td>
                             <td class="PackDownloadButton">
                                 <a style="cursor: pointer" onclick="downloadpack('1.18', '1.0.3')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
@@ -49,7 +57,7 @@
                         </tr>
                         <tr>
                             <td>1.18_v1.0.1</td>
-                            <td>Change Background</td>
+                            <td>Change background</td>
                             <td>2021/12/02</td>
                             <td class="PackDownloadButton">
                                 <a style="cursor: pointer" onclick="downloadpack('1.18', '1.0.1')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
@@ -80,7 +88,7 @@
                         </tr>
                         <tr>
                             <td>1.17_v1.0.2</td>
-                            <td>Bug Fix</td>
+                            <td>Bug fix</td>
                             <td>2021/11/08</td>
                             <td class="PackDownloadButton">
                                 <a style="cursor: pointer" onclick="downloadpack('1.17', '1.0.2')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
@@ -88,7 +96,7 @@
                         </tr>
                         <tr>
                             <td>1.17_v1.0.1</td>
-                            <td>Change StainedGlass Texture</td>
+                            <td>Change stainedglass texture</td>
                             <td>2021/10/01</td>
                             <td class="PackDownloadButton">
                                 <a style="cursor: pointer" onclick="downloadpack('1.17', '1.0.1')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
