--- a/allver.html
+++ b/allver.html
@@ -32,6 +32,14 @@
                 <table class="PackDownload">
                     <tbody>
                         <tr>
+                            <td>1.18_v1.0.6</td>
+                            <td>Etc GUI change</td>
+                            <td>2022/03/27</td>
+                            <td class="PackDownloadButton">
+                                <a style="cursor: pointer" onclick="downloadpack('1.18', '1.0.6')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>1.18_v1.0.5</td>
                             <td>Change moon image</td>
                             <td>2022/03/21</td>
