--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/blugon_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    <a href="https://www.instagram.com/kity_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
                 </li>
             </ul>
         </footer>
