--- a/allver.html
+++ b/allver.html
@@ -254,7 +254,7 @@
                     <a target="_blank" href="https://discord.com/users/602076166999769099" class="icon brands fa-discord"><span class="label">Facebook</span></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.instagram.com/blugon_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+                    <a target="_blank" href="https://www.instagram.com/kity_0921/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
                 </li>
             </ul>
         </footer>
