--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="image"><img src="images/01.png" alt=""></div>
                     <div class="content">
                         <h3>Redesign Enchant Effect</h3>
-                        <p>Redesigned the effect that appears when enchanted<br />마법부여시 나타나는 효과를 개선했습니다</p>
+                        <p>Changed the cake to round<br />케이크를 둥글게 변경했습니다</p>
                     </div>
                 </section>
                 <section class="spotlight">
