--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <section class="spotlight">
                     <div class="image"><img src="images/01.png" alt=""></div>
                     <div class="content">
-                        <h3>Redesign Enchant Effect</h3>
+                        <h3>Round cake</h3>
                         <p>Changed the cake to round<br />케이크를 둥글게 변경했습니다</p>
                     </div>
                 </section>
