--- a/allver.html
+++ b/allver.html
@@ -33,6 +33,14 @@
                 <table class="PackDownload">
                     <tbody>
                         <tr>
+                            <td>1.19_v1.0.2</td>
+                            <td>Change etc textures</td>
+                            <td>2022/07/23</td>
+                            <td class="PackDownloadButton">
+                                <a style="cursor: pointer" onclick="downloadpack('1.19', '1.0.2')"><i class="fas fa-download"></i>&nbsp;&nbsp;Download</a>
+                            </td>
+                        </tr>
+                        <tr>
                             <td>1.19_v1.0.1</td>
                             <td>Round cake!</td>
                             <td>2022/07/21</td>
@@ -241,7 +249,7 @@
             <br />
             <ul class="actions special">
                 <li><a onclick="downloadLastPack()" class="button primary icon solid fa-download">Download Latest</a></li>
-            </ul>
+            </ul>![](images/favicon/favicon.png)
         </section>
 
         <!-- Footer -->
